raccoon update for node run

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.png">
-    <script type="module" src="src/js/init.js"></script>
+    <script type="module" src="./minigame/src/js/init.js"></script>
     <style>
       body {
         background-color: black;
