--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,15 @@
+
 <html>
+    <head>
+    </head>
+    <body>
+        <!-- Canvas placeholder -->
+        <div id="screen"></div>
+        <script type="module" src="./engine/index.js"></script>
+    </body>
+</html>
+
+<!-- <html>
   <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.png">
@@ -9,4 +20,4 @@
       }
     </style>
   </head>
-</html>
+</html> -->
