--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,31 @@
 
-<html>
+<!-- <html>
     <head>
     </head>
     <body>
-        <!-- Canvas placeholder -->
+        <!-- Canvas placeholder 
         <div id="screen"></div>
         <script type="module" src="./engine/index.js"></script>
     </body>
-</html>
+</html> -->
 
-<!-- <html>
+<html>
   <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.png">
     <script type="module" src="./minigame/src/js/init.js"></script>
     <style>
       body {
-        background-color: black;
+        background-color: rgb(221, 212, 212);
       }
-    </style>
+      canvas {
+        width: 100%;
+        height: calc(100% - 20px);
+      }
+
+      .export canvas {
+        height: 100%;
+      }
+          </style>
   </head>
-</html> -->
+</html>
